--- a/index.html
+++ b/index.html
@@ -73,11 +73,10 @@
     <h2>Technology Stack</h2>
     <div class="tech">
         <span>C Programming</span>
-        <span>Linux</span>
+        <span>Linux Internals</span>
         <span>System Calls</span>
         <span>Process Management</span>
-        <span>fork()</span>
-        <span>exec()</span>
+        <span>Signal Handling</span>
     </div>
 </section>
 
