--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div class="menu-toggle" id="menuToggle">&#9776;</div>
 
         <div class="nav-buttons" id="navButtons">
-            <a href="https://github.com/YOUR_USERNAME" class="btn">GitHub Profile</a>
-            <a href="https://github.com/YOUR_USERNAME/MiniShell" class="btn">View Project</a>
+            <a href="https://github.com/Manu-hp1" class="btn">GitHub Profile</a>
+            <a href="https://github.com/Manu-hp1/Minishell" class="btn">View Project</a>
         </div>
     </div>
 </header>
@@ -34,7 +34,7 @@
         </p>
 
         <div class="hero-buttons">
-            <a href="https://github.com/YOUR_USERNAME/MiniShell" class="primary-btn">Source Code</a>
+            <a href="https://github.com/Manu-hp1/Minishell" class="primary-btn">Source Code</a>
             <a href="https://youtube.com/YOUR_DEMO_LINK" class="secondary-btn">Watch Demo</a>
         </div>
     </div>
@@ -62,7 +62,7 @@
     <h2>Key Features</h2>
     <ul class="list">
         <li>Command parsing and tokenization</li>
-        <li>Fork and exec system call usage</li>
+        <li>Fork, exec and waitpid system call usage</li>
         <li>Environment variable handling</li>
         <li>Error handling and input validation</li>
         <li>Modular source code structure</li>
