--- a/index.html
+++ b/index.html
@@ -61,11 +61,12 @@
 <section class="section light">
     <h2>Key Features</h2>
     <ul class="list">
-        <li>Command parsing and tokenization</li>
-        <li>Fork, exec and waitpid system call usage</li>
-        <li>Environment variable handling</li>
-        <li>Error handling and input validation</li>
-        <li>Modular source code structure</li>
+        <li>• Execution of external commands (e.g., ls, wc, sleep)</li>
+        <li>• Built-in internal commands such as cd, pwd, and exit</li>
+        <li>• Command-line input parsing and argument handling</li>
+        <li>• Process control using fork(), execvp(), and waitpid()</li>
+        <li>• Signal handling using SIGINT and SIGCHLD</li>
+        <li>• Stable shell behavior with proper child process management</li>
     </ul>
 </section>
 
@@ -74,9 +75,11 @@
     <div class="tech">
         <span>C Programming</span>
         <span>Linux Internals</span>
-        <span>System Calls</span>
-        <span>Process Management</span>
+        <span>File I/O (fopen, fread, fwrite)</span>
+        <span>POSIX System Calls</span>
+        <span>Process Control (fork, exec, wait)</span>
         <span>Signal Handling</span>
+        <span>Modular Programming</span>
     </div>
 </section>
 
